Closed
Bug 250828
Opened 22 years ago
Closed 21 years ago
When i use global inbox, thunderbird does not use localized string "Inbox".
Categories
(Thunderbird :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: matsuba, Assigned: mscott)
References
Details
(Keywords: fixed-aviary1.0, l12y, Whiteboard: [does not block l10n-freeze])
Attachments
(4 files)
|
75.16 KB,
image/jpeg
|
Details | |
|
70.59 KB,
image/jpeg
|
Details | |
|
22.27 KB,
application/octet-stream
|
Details | |
|
1.49 KB,
patch
|
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; ja-JP; rv:1.7) Gecko/20040704 Firefox/0.9.1
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; ja-JP; rv:1.7) Gecko/20040704 Firefox/0.9.1
When i use global inbox with Japanese Language Pack,
thunderbird does not use localized string "Inbox" in messenger.properties.
When i use not global inbox, thunderbird use localized string "Inbox".
http://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/2004-07-10-04-0.8/
thunderbird-i686-linux-gtk2+xft.tar.gz
Reproducible: Always
Steps to Reproduce:
1. install thunderbird-i686-linux-gtk2+xft.tar.gz
2. thunderbird -ProfileManger, (ie. deafult user)
3. install Japanese Language Pack.
4. restart, switch ja-JP/JP, restart.
5. thunderbird -ProfileManger, create profile for user "matsuba"
Uncheck "User Global Inbox (store mail in Local Folders).
6. install Japanese Language Pack.
7. restart( thunderbird -P matsuba), switch ja-JP/JP, restart.
| Assignee | ||
Comment 3•22 years ago
|
||
If I had to guess I would say this is a localization problem. The localizer
probably isn't trying to localize the word Inbox for a Local Folder because
until this feature was added there was no such thing....
No, I do localized the word "Inbox" (ie. "inboxFolderName=Inbox" in
messenger.properties)
I noticed that it happens in local/Global inbox the word "Local Folders".
(ie. "localFolders=Local Folders" in messenger.properties)
If you need japanese language pack, please use these packs.
http://www33.ocn.ne.jp/~snip/mozilla/tmp/thunderbird-langjajp-unix-tm0.1.xpi
http://www33.ocn.ne.jp/~snip/mozilla/tmp/thunderbird-langjajp-win-tm0.1.xpi
MD5SUM:
e48fb9c893072acd67875cf0bb1ede76 thunderbird-langjajp-unix-tm0.1.xpi
296cbc503ab6c4d207b1f57a0399fe83 thunderbird-langjajp-win-tm0.1.xpi
Confirmed with branch build 2004-07-10-03 on WinXP.
It also works the other way around. If I activate the global inbox in a Swedish
UI and then switch to English UI, it will use the Swedish label "Inkorgen".
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
| Assignee | ||
Comment 9•22 years ago
|
||
David, is it possible that we aren't calling SetPrettyName when we create the
global inbox under local folders:
http://lxr.mozilla.org/mozilla/source/mailnews/base/util/nsMsgDBFolder.cpp#2690
I can't thik of a reason why other folders under local folders would get
translated correctly but not the Inbox.
Comment 10•21 years ago
|
||
*** Bug 258897 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Updated•21 years ago
|
Whiteboard: [blocks l10n-freeze] → [does not block l10n-freeze]
Comment 11•21 years ago
|
||
plussing to see if this can be figured out before 1.0
Flags: blocking-aviary1.0? → blocking-aviary1.0+
| Assignee | ||
Comment 12•21 years ago
|
||
| Assignee | ||
Comment 13•21 years ago
|
||
Comment on attachment 160458 [details] [diff] [review]
possible fix
What do you think of this David?
On startup, we weren't setting the MSG_FOLDER_FLAG_INBOX on the root local
folder.
As a result we never ended up calling:
nsMsgLocalMailFolder::SetFlagsOnDefaultMailboxes(PRUint32 flags)
{
if (flags & MSG_FOLDER_FLAG_INBOX)
setSubfolderFlag(NS_LITERAL_STRING("Inbox").get(), MSG_FOLDER_FLAG_INBOX);
this in turn calls SetPrettyName on the inbox folder which causes us to use the
localized name for "Inbox".
This patch checks to see if the incoming server is acting as the deferred
account. If it is, then pass in the inbox flag so our inbox gets a pretty name.
One thing I wasn't sure of. I noticed I had an Inbox under Local Folders in my
profile and I've never set up a deferred account before. so with this patch,
that name never got the localized name set on it. Was it a fluke that I even
had an inbox showing up under local folders? I wonder how it got created.
If it's possible to get an Inbox here without a deferred account then we should
probably remove my check to make sure the server is acitng as a deferred
account before passing in the folder inbox flag.
Attachment #160458 -
Flags: superreview?(bienvenu)
Comment 14•21 years ago
|
||
Comment on attachment 160458 [details] [diff] [review]
possible fix
I like this - I'd fix the comment // "none" doesn't have an inbox - maybe just
remove it...
Attachment #160458 -
Flags: superreview?(bienvenu) → superreview+
| Assignee | ||
Updated•21 years ago
|
Keywords: fixed-aviary1.0
| Assignee | ||
Comment 15•21 years ago
|
||
finally fixed on the trunk too
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•