Bug #250828 --> When i use global inbox, thunderbird does not use localized string "Inbox".

if the incoming server contains a deferred inbox, be sure to set the inbox flag on the root folder
so we pick up the localized name for the inbox.

sr=bienvenu