mozilla/mailnews/local/src/nsNoIncomingServer.cpp
@@ -94,14 +94,21 @@ nsNoIncomingServer::SetFlagsOnDefaultMailboxes()
     nsCOMPtr<nsIMsgLocalMailFolder> localFolder =
         do_QueryInterface(rootFolder, &rv);
     NS_ENSURE_SUCCESS(rv, rv);
+ 
+    // "none" has a queue (unsent messages)
+    PRUint32 mailboxFlags = MSG_FOLDER_FLAG_SENTMAIL |
+                            MSG_FOLDER_FLAG_DRAFTS |
+                            MSG_FOLDER_FLAG_TEMPLATES |
+                            MSG_FOLDER_FLAG_TRASH |
+                            MSG_FOLDER_FLAG_JUNK |
+                            MSG_FOLDER_FLAG_QUEUE;
 
-    // "none" doesn't have an inbox, but it does have a queue (unsent messages)
-    localFolder->SetFlagsOnDefaultMailboxes(MSG_FOLDER_FLAG_SENTMAIL |
-                                            MSG_FOLDER_FLAG_DRAFTS |
-                                            MSG_FOLDER_FLAG_TEMPLATES |
-                                            MSG_FOLDER_FLAG_TRASH |
-                                            MSG_FOLDER_FLAG_JUNK |
-                                            MSG_FOLDER_FLAG_QUEUE);
+    // "none" may have a inbox if it is getting deferred to.
+    PRBool isDeferredTo;
+    if (NS_SUCCEEDED(GetIsDeferredTo(&isDeferredTo)) && isDeferredTo)
+      mailboxFlags |= MSG_FOLDER_FLAG_INBOX;
+
+    localFolder->SetFlagsOnDefaultMailboxes(mailboxFlags);
     return NS_OK;
 }	
 
